--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,7 +5,8 @@
   "dependencies": {
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-scripts": "0.9.5"
+    "react-scripts": "0.9.5",
+    "serve": "^11.0.0"
   },
   "devDependencies": {
     "eslint": "^5.16.0",
@@ -16,7 +17,7 @@
   },
   "scripts": {
     "dev": "react-scripts start",
-    "start": "serve -s build -l 8080",
+    "start": "npm run build && serve -s build -l 8080",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
