--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,10 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.18.0",
+    "faker": "^4.1.0",
+    "material-ui": "^0.20.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "0.9.5",
-    "serve": "^11.0.0"
+    "serve": "^11.0.0",
+    "twilio-video": "^2.0.0-beta9"
   },
   "devDependencies": {
     "eslint": "^5.16.0",
