--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "react-dom": "^16.8.6",
     "react-mic": "^12.4.1",
     "react-scripts": "0.9.5",
+    "react-speech-recognition": "^2.0.1",
     "serve": "^11.0.0",
     "twilio-video": "^2.0.0-beta9"
   },
