--- a/package.json
+++ b/package.json
@@ -25,15 +25,17 @@
     "css-loader": "^0.28.11",
     "style-loader": "^0.21.0",
     "webpack": "^4.10.2",
-    "webpack-cli": "^3.0.2"
+    "webpack-cli": "^3.3.2"
   },
   "dependencies": {
     "compression": "^1.7.2",
     "express": "^4.16.3",
+    "prop-types": "^15.7.2",
     "react": "^16.4.0",
     "react-dom": ">=16.7.0",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
+    "react-speech-recognition": "^2.0.1",
     "redux": "^4.0.0",
     "remarkable": "^1.7.1",
     "serve-favicon": "^2.5.0",
