Adds speech recognition and removes the video and disctophone components

--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
     "faker": "^4.1.0",
     "http-errors": "~1.6.2",
     "morgan": "~1.9.0",
+    "react-speech-recognition": "^2.0.1",
     "twilio": "^3.30.3",
     "twilio-video": "^2.0.0-beta9",
     "webpack": "^4.30.0"
