--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "react-scripts": "0.9.5",
     "react-speech-recognition": "^2.0.1",
     "serve": "^11.0.0",
+    "translate": "^1.1.0",
     "twilio-video": "^2.0.0-beta9"
   },
   "devDependencies": {
