--- a/backend/package.json
+++ b/backend/package.json
@@ -11,7 +11,8 @@
     "ejs": "^2.5.9",
     "express": "~4.16.0",
     "http-errors": "~1.6.2",
-    "morgan": "~1.9.0"
+    "morgan": "~1.9.0",
+    "socket.io": "^2.2.0"
   },
   "devDependencies": {
     "eslint": "^5.16.0",
