--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,7 +6,8 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "0.9.5",
-    "serve": "^11.0.0"
+    "serve": "^11.0.0",
+    "socket.io-client": "^2.2.0"
   },
   "devDependencies": {
     "eslint": "^5.16.0",
