Reorder things for heroku

--- a/package.json
+++ b/package.json
@@ -3,15 +3,19 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "build-fe": "cd client && npm run build",
+    "start": "npm run build-fe && node ./bin/www"
   },
   "dependencies": {
+    "compression": "^1.7.4",
     "cookie-parser": "~1.4.3",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
     "ejs": "^2.5.9",
     "express": "~4.16.0",
+    "fs": "0.0.1-security",
     "http-errors": "~1.6.2",
+    "https": "^1.0.0",
     "morgan": "~1.9.0",
     "socket.io": "^2.2.0"
   },
