--- a/client/package.json
+++ b/client/package.json
@@ -24,7 +24,7 @@
   "scripts": {
     "dev": "react-scripts start",
     "start": "npm run build && serve -s build -l 8080",
-    "build": "react-scripts build",
+    "build": "react-scripts build && cp -r build/* ../public/",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
