--- a/package.json
+++ b/package.json
@@ -27,5 +27,6 @@
     "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-react": "^7.12.4",
     "nodemon": "^1.19.0"
-  }
+  },
+  "heroku-postbuild": "cd client && npm i"
 }
