--- a/package.json
+++ b/package.json
@@ -28,5 +28,5 @@
     "eslint-plugin-react": "^7.12.4",
     "nodemon": "^1.19.0"
   },
-  "heroku-postbuild": "cd client && npm i"
+  "heroku-prebuild": "cd client && npm i"
 }
